Bug 1754275 - Add a 1s timeout to DBUS call to reveal files. r=stransky

This should be much more acceptable than e.g. 25 seconds to open the
file manager.

Differential Revision: https://phabricator.services.mozilla.com/D138288